# Copydeck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUES.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
packaging/: copydeck.service  install-system-deps.sh
src/: cli.rs  config.rs  daemon.rs  hotkeys.rs  ipc.rs  lib.rs  main.rs  monitor.rs  paste.rs  storage.rs
src/ui/: history_list.rs  mod.rs  pinned_list.rs  popup.rs  styles.css
src/utils/: deps.rs  display.rs  mod.rs
tests/: config_tests.rs  monitor_tests.rs  storage_tests.rs
tests/fixtures/: multiline.txt  rich.html  unicode.txt  uris.txt
